--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.0.3",
+    "jotai": "^2.6.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
